--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <version>1.5.2</version>
         </dependency>
 
+<!--        validation-->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.3.Final</version>
+        </dependency>
+
         <!-- Spring Security Test -->
         <dependency>
             <groupId>org.springframework.security</groupId>
