--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,17 @@ spring:
       max-file-size: 10MB  # 单个文件最大10MB
       max-request-size: 50MB  # 总请求最大50MB
       enabled: true
+  spring:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      # password
+      lettuce:
+        pool:
+          max-active: 16 # 最大连接数
+          max-idle: 8 # 最大空闲连接数
+          min-idle: 0 # 最小空闲连接数
+      timeout: 2000 # 连接超时时间 ms
 
 server:
   port: 8080
